samples/_failures_safe/1761426962_75088e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_994db39f.c:153:1: error: expected declaration specifiers or ‘...’ at end of input
  153 | int matrix_determinant(int **matrix,
      | ^~~
